# AuraRay

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
docs/: architecture.md  devlog.md
docs/media/: README.md
renders/: antialias_sphere.ppm  first_image.ppm  foveated_full.json  foveated_full.ppm  foveated_gaze.json  foveated_gaze.ppm  foveated_low.json  foveated_low.ppm  foveated_overlay.ppm  glass_orbs.json  glass_orbs.ppm  minimal_raytracer.ppm  warm_studio_spheres.json  warm_studio_spheres.ppm  xr_lens_demo.json  xr_lens_demo.ppm
scripts/: generate_demo_media.swift  verify_render_reproducibility.sh
src/: main.cpp
src/core/: Camera.cpp  Camera.h  Random.cpp  Random.h  Ray.h  Vec3.cpp  Vec3.h
src/geometry/: Hittable.cpp  Hittable.h  HittableList.cpp  HittableList.h  Sphere.cpp  Sphere.h
src/io/: ImageWriter.cpp  ImageWriter.h  MetadataWriter.cpp  MetadataWriter.h
src/materials/: Dielectric.cpp  Dielectric.h  Lambertian.cpp  Lambertian.h  Material.h  Metal.cpp  Metal.h
src/render/: Config.h  Foveation.cpp  Foveation.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
tests/: expected_render_hashes.sha256
unity/AuraRayViewer/Assets/AuraRay/Editor/: AuraRayDemoCapture.cs  AuraRaySceneBuilder.cs
unity/AuraRayViewer/Assets/AuraRay/Resources/Renders/: foveated_overlay.json
unity/AuraRayViewer/Assets/AuraRay/Scenes/: AuraRayViewer.unity
unity/AuraRayViewer/Assets/AuraRay/Scripts/: AuraRayGazeOverlay.cs  AuraRayMetadata.cs  AuraRayViewerController.cs  GazeTargetController.cs
unity/AuraRayViewer/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
